complete user related endpoints
